Reduce overhead of REST Client config handling
The idea here is to reduce the lookups to Smallrye Config
while also reducing object creation when those lookups are
necessary

Relates to: #42092